--- a/css/style.css
+++ b/css/style.css
@@ -1,22 +1,17 @@
-.profile_rightcol > .bgstyle
-{
+.profile_rightcol > .bgstyle {
 	width:93%;
 	border-radius:3px;
-	background-image:url(https://steamcommunity-a.akamaihd.net/public/images/profile/showcase_bg.png);
-	background-position:top center;
-	background-color:#141414;
 	margin-bottom:20px;
 	padding:10px;
-	background-repeat:no-repeat;
+	background: #141414 url(https://steamcommunity-a.akamaihd.net/public/images/profile/showcase_bg.png) no-repeat top center;
 }
 
-.profile_rightcol > .bgstyle > .toptitle
-{
+.profile_rightcol > .bgstyle > .toptitle {
 	width:100%;
 	padding-bottom:10px;
 	font-size:14px;
 	color: #5491cf;
-	font-family:'Motiva Sans', Sans-serif;
+	font-family: 'Motiva Sans', Sans-serif, serif;
 }
 
 .profile_rightcol > .bgstyle > div > table {
@@ -47,11 +42,10 @@
 }
 
 .profile_rightcol > .bgstyle > div > table > tr:after {
-  margin-top: 0px;
+  margin-top: 0;
 }
 
-.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(1)
-{
+.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(1) {
 	width:3px;
 	background:#4e4e4e;
 	float:left;
@@ -61,52 +55,43 @@
 	margin-top:2px;
 }
 
-.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(2), .profile_rightcol > .bgstyle > div > table > tr > th:nth-child(2)
-{
+.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(2), .profile_rightcol > .bgstyle > div > table > tr > th:nth-child(2) {
 	float:left;
 }
 
-.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(3), .profile_rightcol > .bgstyle > div > table > tr > th:nth-child(3)
-{
+.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(3), .profile_rightcol > .bgstyle > div > table > tr > th:nth-child(3) {
 	float:right;
 	padding-right:8px;
 }
 
-.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(3), .profile_rightcol > .bgstyle > div > table > tr > th:nth-child(4)
-{
+.profile_rightcol > .bgstyle > div > table > tr > td:nth-child(3), .profile_rightcol > .bgstyle > div > table > tr > th:nth-child(4) {
 	float:right;
 	padding-right:8px;
 }
 
 
-.profile_rightcol > .bgstyle > div > table > tr > td > .slash
-{
+.profile_rightcol > .bgstyle > div > table > tr > td > .slash {
 	color:#4f5051;
 }
 
-.profile_rightcol > .bgstyle > div > table > tr > td > .admin
-{
+.profile_rightcol > .bgstyle > div > table > tr > td > .admin {
 	color:rgb(84, 145, 207);
 }
 
-.line
-{
+.line {
 	border-bottom: 1px dotted rgb(102, 102, 102);
 	border-top:0;
 }
 
-.player_online
-{
+.player_online {
 	background-color: #149830 !important;
 }
 
-.player_banned
-{
+.player_banned {
 	background-color: #97142a !important;
 }
 
-.info
-{
+.info {
 	text-transform:uppercase;
 	font-size:11px;
 	padding-left:3px;
@@ -117,8 +102,7 @@
 	display: block;
 }
 
-.copyclip
-{
+.copyclip {
 	float:right;
 	background: #13151724;
 	color: rgb(84, 145, 207);
@@ -159,20 +143,17 @@
 	transition: 0s
 }
 
-.neverplayed
-{
+.neverplayed {
 	text-align: center;
 	width: 100%;
 }
 
-.connect
-{
+.connect {
 	text-align: center;
-	margin: 5px 0px 5px 0px;
+	margin: 5px 0;
 }
 
-.connect a
-{
+.connect a {
 	color: #90ba3c;
 	font-size: 10px;
 	margin-top: -5px;
